@@ -78,6 +78,12 @@ CONFIG_LOADER_DREAMLOAD=y
 # Enable ULoad Model 3 fast loader
 CONFIG_LOADER_ULOAD3=y
 
+# Enable G.I. Joe fast loader
+CONFIG_LOADER_GIJOE=y
+
+# Enable Epyx Fast Load cartridge fast loader
+CONFIG_LOADER_EPYXCART=y
+
 # Select which hardware to compile for
 # Valid values:
 #   1 - custom configuration in config.h
