@@ -42,6 +42,8 @@ CONFIG_JIFFY_ASM=y
 CONFIG_LOADER_FC3=y
 CONFIG_LOADER_DREAMLOAD=y
 CONFIG_LOADER_ULOAD3=y
+CONFIG_LOADER_GIJOE=y
+CONFIG_LOADER_EPYXCART=y
 CONFIG_HARDWARE_VARIANT=3
 CONFIG_HARDWARE_NAME=mmc2iec
 CONFIG_SD_AUTO_RETRIES=10
