@@ -43,6 +43,8 @@ CONFIG_JIFFY_ASM=y
 CONFIG_LOADER_FC3=y
 CONFIG_LOADER_DREAMLOAD=y
 CONFIG_LOADER_ULOAD3=y
+CONFIG_LOADER_GIJOE=y
+CONFIG_LOADER_EPYXCART=y
 CONFIG_HARDWARE_VARIANT=4
 CONFIG_HARDWARE_NAME=uIEC
 CONFIG_SD_AUTO_RETRIES=10
